feat: ui overhaull n stuff
